examples/test/testpolicy4058.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy4058
  namespace: namespace485
spec:
  podSelector:
    matchLabels:
      key36: value1
      key28: value23
      key17: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value10
          key4: value0
      podSelector:
        matchLabels:
          key22: value47
          key29: value15
